# SFML_Collision

./: CMakeLists.txt  main.cpp
include/: Application.h  Collider.h
src/: Application.cpp  Collider.cpp
